# basics

./: .gitignore  Cargo.toml  README.md  pyproject.toml
basics/: __init__.py  demo_funcs.py  demo_perceptron.py  settings.py
src/: lib.rs  linalg.rs  linalg_no_integration.rs  utils.rs
tests/: test_all.py
